--- a/.azure/pipeline/main.yml
+++ b/.azure/pipeline/main.yml
@@ -22,6 +22,7 @@ steps:
 
 - task: AzureCLI@2
   inputs:
+    displayName: "Resource Group"
     azureSubscription: $(serviceConnectionName)
     scriptType: "bash"
     scriptLocation: "inlineScript"
@@ -30,6 +31,7 @@ steps:
 
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
+    displayName: "Bicep Files"
     deploymentScope: "Resource Group"
     azureResourceManagerConnection: $(serviceConnectionName)
     subscriptionId: $(subscriptionId)
