--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -11,6 +11,7 @@
     <Folder Include="Enums\" />
     <Folder Include="Events\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
