--- a/.azure/pipeline/main.yml
+++ b/.azure/pipeline/main.yml
@@ -38,4 +38,4 @@ steps:
     csmFileLink: "https://raw.githubusercontent.com/pedromonteiroleite/PowerPlantProduction/main/.azure/bicep/main.bicep"
     deploymentMode: "Incremental"
     deploymentName: "DeployPipelineTemplate"
-    overrideParameters: "-location $(location) -adminPassword $(adminPassword)"
+    overrideParameters: "-location $(location) -sqlAdministratorPassword $(sqlAdministratorPassword) -sqlAdministratorUsername $(sqlAdministratorUsername) -environmentType $(environmentType)"
