--- a/.azure/pipeline/main.yml
+++ b/.azure/pipeline/main.yml
@@ -38,3 +38,13 @@ steps:
     csmFileLink: "https://raw.githubusercontent.com/pedromonteiroleite/PowerPlantProduction/main/.azure/bicep/main.bicep"
     deploymentMode: "Incremental"
     deploymentName: "DeployPipelineTemplate"
+    overrideParameters: |
+      -environmentType $(environmentType)
+      -location $(location) 
+      -myIpAddress $(myIpAddress) 
+      -resourceGroupName $(resourceGroupName) 
+      -serviceConnectionName $(serviceConnectionName) 
+      -sqlAdministratorPassword $(sqlAdministratorPassword) 
+      -sqlAdministratorUsername $(sqlAdministratorUsername) 
+      -subscriptionId $(subscriptionId) 
+      -projectName $(projectName)"
