--- a/src/WebAPP/Properties/launchSettings.json
+++ b/src/WebAPP/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:55201",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:61700",
+      "sslPort": 44393
     }
   },
   "profiles": {
-    "WebAPP": {
+    "WebApplication1": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5251",
+      "applicationUrl": "https://localhost:7282;http://localhost:5282",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
